--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,5 +9,18 @@
     "mongoose": "^9.1.5",
     "redis": "^5.10.0",
     "validator": "^13.15.26"
-  }
+  },
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "start": "node src/index.js",
+    "dev":"nodemon src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
