--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-VITE_BACKEND_URL=https://pani-puri-resturant.onrender.com/
+# VITE_BACKEND_URL=https://pani-puri-resturant.onrender.com/
+VITE_BACKEND_URL=http://localhost:4040
